S11P12D210-132 Feat: Filter 뷰 예쁘게 수정

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -41,6 +41,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:checked="true"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/recent"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,16 +53,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
 
         <RadioButton
             android:id="@+id/rb_popular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/popular"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -243,6 +247,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:checked="true"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/week"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -251,16 +259,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
         <RadioButton
             android:id="@+id/rb_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/month"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -268,16 +275,15 @@
             app:layout_constraintStart_toEndOf="@id/rb_week"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
         <RadioButton
             android:id="@+id/rb_three_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/three_months"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -285,16 +291,15 @@
             app:layout_constraintStart_toEndOf="@id/rb_month"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
         <RadioButton
             android:id="@+id/rb_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/year"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -345,6 +350,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:checked="true"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
             android:text="@string/one_to_one"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -353,16 +362,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
         <RadioButton
             android:id="@+id/rb_one_to_multi"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:background="@drawable/selector_radio_button"
+            android:textColor="@drawable/selector_radio_text"
+            android:button="@null"
+            android:gravity="center"
+            android:layout_marginVertical="1dp"
             android:text="@string/one_to_multiple"
             android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
