--- a/app/src/main/res/drawable/toggle_button_background.xml
+++ b/app/src/main/res/drawable/toggle_button_background.xml
@@ -7,7 +7,9 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/gray_10"/>
+            <solid android:color="#FFFFFF"/>
+            <stroke android:color="@color/primary"/>
+            <stroke android:width="1dp"/>
         </shape>
     </item>
 </selector>
