S11P12D210-161 Feat: 스크롤뷰 아래 내용 가리는 에러 해결 및 사진 올리면 스크롤 아래로 설정

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
     <dimen name="dialog_padding_medium">40dp</dimen>
     <dimen name="live_padding">150dp</dimen>
+    <dimen name="bottom_button_padding">80dp</dimen>
 
 
     <!-- EditText -->
