--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -7,8 +7,10 @@
     tools:context=".ui.homeUI.myPage.registerNotice.RegisterNoticeFragment">
 
     <ScrollView
+        android:id="@+id/sc_register_notice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/bottom_button_padding">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -53,15 +55,6 @@
                 app:layout_constraintTop_toBottomOf="@id/divider5"
                 tools:src="@drawable/sample2" />
 
-            <ImageView
-                android:id="@+id/iv_cancel"
-                android:layout_width="@dimen/icon_mini"
-                android:layout_height="@dimen/icon_mini"
-                android:src="@drawable/baseline_cancel_red"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/divider5" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
@@ -76,15 +69,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/btn_add_photo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/RegisterButton"
+        android:backgroundTint="@color/bottomnav"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/divider4"
-        app:strokeColor="@color/white">
+        >
 
         <TextView
             android:id="@+id/tv_add_photo"
@@ -100,6 +94,33 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btn_delete_photo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/RegisterButton"
+        android:backgroundTint="@color/bottomnav"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingVertical="@dimen/padding_large"
+            android:text="@string/delete_photo"
+            android:textSize="@dimen/text_medium_large20"
+            app:drawableStartCompat="@drawable/photo_camera"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
