S11P12D210-144 UI : 회원정보 수정 및 해시태그 UI 구현

--- a/app/src/main/res/layout/list_item_hashtag.xml
+++ b/app/src/main/res/layout/list_item_hashtag.xml
@@ -5,21 +5,20 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:padding="@dimen/padding_small"
     app:cardBackgroundColor="@color/bottomnav"
     app:cardCornerRadius="20dp"
     app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_extra_small">
 
         <TextView
             android:id="@+id/tv_hashtag"
-            style="@style/SingleLineText"
             android:layout_width="0dp"
             android:layout_height="@dimen/padding_large"
-            android:maxLength="30"
+            android:maxLength="15"
             android:paddingStart="@dimen/padding_extra_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
