--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -151,6 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:maxLength="15"
                 android:lines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
