--- a/app/src/main/res/layout/fragment_lecture_list.xml
+++ b/app/src/main/res/layout/fragment_lecture_list.xml
@@ -17,6 +17,7 @@
         android:focusable="true"
         android:queryHint="찾으시는 강사님이 있으신가요?"
         app:iconifiedByDefault="false"
+        app:queryBackground="@drawable/no_underline"
         app:layout_constraintBottom_toTopOf="@id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
