--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,9 +50,13 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:padding">24dp</item>
+        <item name="android:padding">20dp</item>
         <item name="android:button">@null</item>
-        <item name="android:background">@color/primary</item>
+        <item name="android:background">@color/bottomnav</item>
+    </style>
+
+    <style name="CustomSearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="queryBackground">@drawable/no_underline</item>
     </style>
 
     <style name="boxCornerRadiusStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
