S11P12D210-18-3-5-ui 캘린터 뷰 라이브러리 추가 완료! 하지만 아직 custom 필요함..

--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -69,6 +69,7 @@
         app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
