--- a/app/src/main/res/layout/dialog_enter.xml
+++ b/app/src/main/res/layout/dialog_enter.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_enter"
@@ -50,6 +48,8 @@
         android:paddingHorizontal="@dimen/padding_extra_large"
         tools:text="TextView"
         style="@style/commonText"
+        android:scrollbars="vertical"
+        android:maxLines="6"
         android:layout_margin="@dimen/padding_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
