--- a/app/src/main/res/layout/list_item_mylist.xml
+++ b/app/src/main/res/layout/list_item_mylist.xml
@@ -60,6 +60,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
