--- a/app/src/main/res/layout/list_item_teacher.xml
+++ b/app/src/main/res/layout/list_item_teacher.xml
@@ -44,28 +44,40 @@
         app:layout_constraintTop_toBottomOf="@id/tv_teacher_nickname"
         tools:text="#힐링 요가 #요가 마스터 #유연성" />
 
-    <ImageView
-        android:id="@+id/iv_favorite"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_favorite"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="@dimen/padding_small"
-        android:src="@drawable/favorite"
         app:layout_constraintBottom_toTopOf="@id/tv_count"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iv_favorite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/favorite" />
+
+        <ImageView
+            android:id="@+id/iv_favorite_color"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/favorite_color" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLength="4"
-        android:text="0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/iv_favorite"
-        app:layout_constraintStart_toStartOf="@id/iv_favorite"
-        app:layout_constraintTop_toBottomOf="@id/iv_favorite" />
+        app:layout_constraintEnd_toEndOf="@id/cv_favorite"
+        app:layout_constraintStart_toStartOf="@id/cv_favorite"
+        app:layout_constraintTop_toBottomOf="@id/cv_favorite"
+        tools:text="0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
