S11P12D210-157 Feat: 강사-필터 뷰 간 네비게이션 정리,필터 뷰 수정

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.homeUI.teacher.filter.FilterFragment">
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -396,9 +395,10 @@
     </ScrollView>
 
     <TextView
+        android:id="@+id/btn_filter_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="검색"
+        android:text="@string/save"
         android:gravity="center"
         style="@style/RegisterButton"
         app:layout_constraintBottom_toBottomOf="parent"/>
