--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,8 +15,8 @@
             android:layout_width="@dimen/icon_large"
             android:layout_height="@dimen/icon_large"
             android:layout_marginTop="@dimen/padding_large"
-            android:src="@drawable/user"
             android:scaleType="centerCrop"
+            android:src="@drawable/user"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -131,7 +131,19 @@
             app:drawableStartCompat="@drawable/logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_quit"
             app:layout_constraintTop_toBottomOf="@id/tv_register_notice"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/tv_quit"
+            style="@style/profile"
+            android:text="@string/quit"
+            android:textSize="16sp"
+            app:drawableStartCompat="@drawable/delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_logout"
             tools:ignore="RtlSymmetry" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
