S11P12D210-165 Feat: 강의 찾기 및 검색 기능 구현

--- a/app/src/main/res/layout/list_item_lecture_thumbnail.xml
+++ b/app/src/main/res/layout/list_item_lecture_thumbnail.xml
@@ -68,7 +68,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_small"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="1"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@id/cv_content"
         app:layout_constraintEnd_toEndOf="@id/cv_content"
         app:layout_constraintStart_toStartOf="@id/cv_content"
