--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -118,6 +118,11 @@
         <action
             android:id="@+id/action_filterFragment_to_teacherListFragment"
             app:destination="@id/teacherListFragment" />
+        <argument
+            android:name="filter"
+            android:defaultValue="@null"
+            app:argType="com.ssafy.yoganavi.data.source.teacher.FilterData"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/teacherDetailFragment"
