--- a/app/src/main/res/layout/list_item_lecture.xml
+++ b/app/src/main/res/layout/list_item_lecture.xml
@@ -4,17 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/padding_medium">
+    android:background="?attr/selectableItemBackground">
 
-    <!-- 4-1 -->
-
-    <VideoView
-        android:id="@+id/vv_lecture"
-        android:layout_width="160dp"
-        android:layout_height="110dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/iv_lecture"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/padding_medium"
+        android:background="@color/gray_20"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@id/dv"
+        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintEnd_toStartOf="@id/tv_video_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.33" />
+
+    <ImageView
+        android:id="@+id/iv_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_play_circle_outline_24"
+        app:layout_constraintBottom_toBottomOf="@id/iv_lecture"
+        app:layout_constraintEnd_toEndOf="@id/iv_lecture"
+        app:layout_constraintStart_toStartOf="@id/iv_lecture"
+        app:layout_constraintTop_toTopOf="@id/iv_lecture" />
 
     <TextView
         android:id="@+id/tv_video_title"
@@ -23,12 +37,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_medium"
         android:layout_marginBottom="@dimen/padding_small"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_medium"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tv_video_length"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/vv_lecture"
-        app:layout_constraintTop_toTopOf="@id/vv_lecture"
+        app:layout_constraintStart_toEndOf="@id/iv_lecture"
+        app:layout_constraintTop_toTopOf="@id/iv_lecture"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="Chapter 1. 뒷다리 늘리기" />
 
@@ -36,6 +50,7 @@
         android:id="@+id/tv_video_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/text_small"
         app:layout_constraintBottom_toTopOf="@id/tv_video_content"
         app:layout_constraintStart_toStartOf="@id/tv_video_title"
         app:layout_constraintTop_toBottomOf="@id/tv_video_title"
@@ -45,12 +60,25 @@
         android:id="@+id/tv_video_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_small"
         android:breakStrategy="balanced"
         android:ellipsize="end"
         android:maxLines="2"
-        app:layout_constraintBottom_toBottomOf="@id/vv_lecture"
+        android:textSize="@dimen/text_small"
+        app:layout_constraintBottom_toBottomOf="@id/iv_lecture"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_video_title"
+        app:layout_constraintStart_toStartOf="@+id/tv_video_title"
         app:layout_constraintTop_toBottomOf="@id/tv_video_length"
         tools:text="앞다리 근육을 단력시켜 더 좋은 선택을 하는 근육강아지가 될 수 있습니다다근육강아지가 될 수 있습니다다근육강아지가 될 수 있습니다다근육강아지가 될 수 있습니다다" />
+
+    <View
+        android:id="@+id/dv"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/padding_medium"
+        android:background="@color/gray_10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_video_content" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
