S11P12D210-193 Feat: Video 데이터 넘길 때 N개의 Video URL 넘기기

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -164,9 +164,8 @@
         android:label="fragment_lecture_video"
         tools:layout="@layout/fragment_lecture_video" >
         <argument
-            android:name="videoUri"
-            android:defaultValue=""
-            app:argType="string" />
+            android:name="uriList"
+            app:argType="string[]" />
     </fragment>
     <fragment
         android:id="@+id/likeTeacherFragment"
