--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -162,7 +162,7 @@
         android:id="@+id/lectureVideoFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.lecture.lectureVideo.LectureVideoFragment"
         android:label="fragment_lecture_video"
-        tools:layout="@layout/fragment_lecture_video" >
+        tools:layout="@layout/fragment_lecture_video">
         <argument
             android:name="uriList"
             app:argType="string[]" />
@@ -176,7 +176,15 @@
         android:id="@+id/likeLectureFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.myPage.likeLecture.LikeLectureFragment"
         android:label="fragment_like_lecture"
-        tools:layout="@layout/fragment_like_lecture" />
+        tools:layout="@layout/fragment_like_lecture">
+        <action
+            android:id="@+id/action_likeLectureFragment_to_lectureDetailFragment"
+            app:destination="@id/lectureDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/myListFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.myPage.myList.MyListFragment"
