S11P12D210-213 Fix: 안 올린 사진 나오는 에러 수정

--- a/app/src/main/res/layout/list_item_notice.xml
+++ b/app/src/main/res/layout/list_item_notice.xml
@@ -85,9 +85,9 @@
             android:layout_marginTop="@dimen/padding_medium"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/sample"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_content" />
+            app:layout_constraintTop_toBottomOf="@id/tv_content"
+            tools:src="@drawable/sample" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
