--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="icon_extra_small">24dp</dimen>
     <dimen name="icon_small">30dp</dimen>
     <dimen name="icon_little_medium">36dp</dimen>
+    <dimen name="icon_medium40">40dp</dimen>
     <dimen name="icon_medium">48dp</dimen>
     <dimen name="icon_large">100dp</dimen>
     <dimen name="icon_little_large">120dp</dimen>
