--- a/app/src/main/res/layout/fragment_lecture_video.xml
+++ b/app/src/main/res/layout/fragment_lecture_video.xml
@@ -15,4 +15,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.ssafy.yoganavi.ui.homeUI.lecture.lectureVideo.PoseView
+        android:id="@+id/pose_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
