--- a/app/src/main/res/layout/fragment_course_history.xml
+++ b/app/src/main/res/layout/fragment_course_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.homeUI.myPage.myList.MyListFragment">
+    tools:context=".ui.homeUI.myPage.courseHistory.CourseHistoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_my_list"
