--- a/app/src/main/res/layout/fragment_teacher_detail.xml
+++ b/app/src/main/res/layout/fragment_teacher_detail.xml
@@ -1,123 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.homeUI.teacher.teacherDetail.TeacherDetailFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_teacher_detail"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/iv_profile"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintDimensionRatio="3:2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_nickname"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-        <TextView
-            android:id="@+id/tv_nickname"
-            style="@style/SingleLineText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_medium"
-            android:textSize="@dimen/text_medium_large"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_profile"
-            tools:text="요구르트" />
-
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/tv_nickname"
-            android:layout_marginBottom="@dimen/padding_medium"
-            app:layout_constraintBottom_toTopOf="@id/tv_hashtag"
-            app:layout_constraintStart_toStartOf="@id/tv_nickname"
-            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
-            tools:text="기본에 충실한 하타요가를 가르칩니다." />
-
-        <TextView
-            android:id="@+id/tv_hashtag"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/tv_nickname"
-            app:layout_constraintBottom_toTopOf="@id/btn_reserve"
-            app:layout_constraintStart_toStartOf="@id/tv_nickname"
-            app:layout_constraintTop_toBottomOf="@id/tv_content"
-            tools:text="#힐링 요가 #요가 마스터 #유연성" />
-
-        <Button
-            android:id="@+id/btn_reserve"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="실시간 강의 예약하기"
-            android:textColor="@color/black"
-            android:layout_margin="@dimen/padding_medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_hashtag" />
-
-        <TextView
-            android:id="@+id/tv_title_lecture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/BoldMediumText"
-            android:layout_margin="@dimen/padding_small"
-            app:layout_constraintBottom_toTopOf="@id/rv_lecture_list"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_reserve"
-            android:text="@string/lecture" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_lecture_list"
-            android:layout_width="0dp"
-            android:layout_height="160dp"
-            android:paddingHorizontal="@dimen/padding_small"
-            app:layout_constraintTop_toBottomOf="@id/tv_title_lecture"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_title_notice"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="horizontal"
-            tools:listitem="@layout/list_item_teacher_lecture"/>
-
-        <TextView
-            android:id="@+id/tv_title_notice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/BoldMediumText"
-            android:layout_margin="@dimen/padding_small"
-            app:layout_constraintBottom_toTopOf="@id/rv_notice_list"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rv_lecture_list"
-            android:text="@string/notice" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_notice_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title_notice"
-            tools:listitem="@layout/list_item_notice" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
