--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.YogaNavi" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.YogaNavi" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorSurfaceContainer">@color/surface_container</item>
         <item name="colorSecondaryContainer">@color/second_primary</item>
-        <item name="android:windowBackground">@color/white</item> <!-- 기본 배경색을 흰색으로 설정 -->
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <style name="Theme.YogaNavi" parent="Base.Theme.YogaNavi" />
