--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -97,6 +97,15 @@
         app:layout_constraintTop_toTopOf="@+id/til_cn" />
 
     <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="5:00"
+        app:layout_constraintTop_toBottomOf="@id/btn_check"
+        app:layout_constraintStart_toStartOf="@id/btn_check"
+        app:layout_constraintEnd_toEndOf="@id/btn_check"/>
+
+    <TextView
         android:id="@+id/tv_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
